--- a/index.html
+++ b/index.html
@@ -9,12 +9,42 @@
     <meta property="og:title" content="Title Here">
     <meta property="og:description" content="short decription about your page">
 
-    <title>Boiler Plate</title>
+    <title>Project Grid Images</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.icon" type="image/x-icon">
+    <link rel="shortcut icon" href="Favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <p>Hello Copy/Paste!</p>   
-</body>
+
+    <nav>
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Enter Site &nbsp; &nbsp; &nbsp; My Account &nbsp; &nbsp; &nbsp; Track Orders &nbsp; &nbsp; &nbsp; Contact Info
+    </nav>
+
+    <main class="container">
+        <img src="ce_image01.png" class="A">
+        <img src="ce_image02.png" class="B">
+        <img src="ce_image03.png" class="C">
+        <img src="ce_image04.png" class="D">
+        <img src="ce_image05.png" class="E">
+        <img src="ce_image06.png" class="F">
+        <img src="ce_image07.png" class="G">
+        <img src="ce_image08.png" class="H">
+        <img src="ce_image09.png" class="I">
+        <img src="ce_image10.png" class="J">
+        <img src="ce_image11.png" class="K">
+        <img src="ce_image12.png" class="L">
+        <img src="ce_image13.png" class="M">
+        <img src="ce_image14.png" class="N">
+        <img src="ce_image15.png" class="O">
+        <img src="ce_image16.png" class="P">
+        <img src="ce_image17.png" class="Q">
+        <img src="ce_image18.png" class="R">
+        <img src="ce_image19.png" class="S">
+        <img src="ce_image20.png" class="T">
+        <img src="ce_image21.png" class="U">
+        <div class="item-V item">Costume Expressions <br> 3411 Torrence Dr. <br> Rockville, MD 20850</div>
+    </main>
+
+</body> 
+</main>
 </html>
