--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <img src="ce_image19.png" class="S">
         <img src="ce_image20.png" class="T">
         <img src="ce_image21.png" class="U">
-        <div class="item-V item">Costume Expressions <br> 3411 Torrence Dr. <br> Rockville, MD 20850</div>
     </main>
 
+    <footer>
+        Costume Expressions <br> 3411 Torrence Dr. <br> Rockville, MD 20850
+    </footer>
+
 </body> 
-</main>
 </html>
