--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
     </nav>
 
     <main class="container">
-        <img src="ce_image01.png" class="A">
-        <img src="ce_image02.png" class="B">
-        <img src="ce_image03.png" class="C">
-        <img src="ce_image04.png" class="D">
-        <img src="ce_image05.png" class="E">
-        <img src="ce_image06.png" class="F">
-        <img src="ce_image07.png" class="G">
-        <img src="ce_image08.png" class="H">
-        <img src="ce_image09.png" class="I">
-        <img src="ce_image10.png" class="J">
-        <img src="ce_image11.png" class="K">
-        <img src="ce_image12.png" class="L">
-        <img src="ce_image13.png" class="M">
-        <img src="ce_image14.png" class="N">
-        <img src="ce_image15.png" class="O">
-        <img src="ce_image16.png" class="P">
-        <img src="ce_image17.png" class="Q">
-        <img src="ce_image18.png" class="R">
-        <img src="ce_image19.png" class="S">
-        <img src="ce_image20.png" class="T">
-        <img src="ce_image21.png" class="U">
+        <img src="ce_image01.png" class="A" alt="image">
+        <img src="ce_image02.png" class="B" alt="image">
+        <img src="ce_image03.png" class="C" alt="image">
+        <img src="ce_image04.png" class="D" alt="image">
+        <img src="ce_image05.png" class="E" alt="image">
+        <img src="ce_image06.png" class="F" alt="image">
+        <img src="ce_image07.png" class="G" alt="image">
+        <img src="ce_image08.png" class="H" alt="image">
+        <img src="ce_image09.png" class="I" alt="image">
+        <img src="ce_image10.png" class="J" alt="image">
+        <img src="ce_image11.png" class="K" alt="image">
+        <img src="ce_image12.png" class="L" alt="image">
+        <img src="ce_image13.png" class="M" alt="image">
+        <img src="ce_image14.png" class="N" alt="image">
+        <img src="ce_image15.png" class="O" alt="image">
+        <img src="ce_image16.png" class="P" alt="image">
+        <img src="ce_image17.png" class="Q" alt="image">
+        <img src="ce_image18.png" class="R" alt="image">
+        <img src="ce_image19.png" class="S" alt="image">
+        <img src="ce_image20.png" class="T" alt="image">
+        <img src="ce_image21.png" class="U" alt="image">
     </main>
 
     <footer>
